# ODBplusplus-Parser

./: .gitignore  README.md  __init__.py  arctest.py  coordinate2.py  example_beaglebone.py  main.py  odbparse.py  pcb_geom.py  pyproject.toml
examples/beagleboneblack/matrix/: .matrix.sum  matrix
examples/beagleboneblack/misc/: .attrlist.sum  .info.sum  attrlist  info  job_name  last_read  last_save  userattr  wizard.state.xml
examples/beagleboneblack/steps/stp/: .attrlist.sum  .profile.sum  .stephdr.sum  attrlist  profile
examples/beagleboneblack/steps/stp/eda/: data
examples/beagleboneblack/steps/stp/layers/bottom/: .attrlist.sum  .features.sum  attrlist  features
examples/beagleboneblack/steps/stp/layers/comp_+_bot/: .attrlist.sum  .features.sum  attrlist  components
examples/beagleboneblack/steps/stp/layers/comp_+_top/: .attrlist.sum  attrlist  components
examples/beagleboneblack/steps/stp/layers/drill/: .attrlist.sum  .features.sum  .tools.sum  features  tools
examples/beagleboneblack/steps/stp/layers/fab/: .attrlist.sum  .features.sum  attrlist  features
examples/beagleboneblack/steps/stp/layers/fab_drc/: .features.sum  attrlist  features
examples/beagleboneblack/steps/stp/layers/height_bot/: .attrlist.sum  .features.sum  features
examples/beagleboneblack/steps/stp/layers/lyr2_gnd/: .attrlist.sum  .features.sum  attrlist  features
examples/beagleboneblack/steps/stp/layers/lyr3/: .attrlist.sum  .features.sum  attrlist  features
odbparse/: __init__.py  _coordinate2.py  _odbparse.py  _pcb_geom.py
(+52 files in other folders)
