[project]
name = "odbparse"
version = "0.1.0"
description = "For ODB++ parsing"
readme = "README.md"
requires-python = ">3.10, <=3.12"
#requires-python = ">3.10"   # for no cadquery
dependencies = [
    "gmsh>=4.13.0, <4.14.0",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "matplotlib>=3.8.0",
    # Linux specific
    "numpy>=2.0, <2.3; platform_system==\"Linux\"",
    #"numba>=0.61; platform_system != \"Linux\"",
    # Other OS
    #"numpy>=2.2, <2.3; platform_system != \"Linux\"",
    #"numba>=0.60.0, <0.61.0; platform_system==\"Linux\"",
    # Others
    "pyvista>=0.45.2",
    #"scipy>=1.14.0",
    #"mkl!=2024.0; platform_machine == \"x86_64\" or platform_machine == \"AMD64\"",
    #"emsutil>=0.5.0, <0.6.0",
    #"msgpack>=1.1.2",
    #"msgpack-numpy>=0.4.8",
    #"psutil>=7.2.2",
    #"emerge",
    "cadquery-ocp",
    "cadquery",
    "networkx",
    "shapely",
]

[tool.uv.sources]
emerge = { git = "https://github.com/FennisRobert/EMerge" }
#emerge = { git = "https://github.com/sjgallagher2/EMerge" }